[add] debian 9 image

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
       fail-fast: false
       matrix:
         distribution:
+            version: "9"
+            tags: "9"
+            platform: "linux/amd64"
           - image: debian
             version: "10"
             tags: "10"
