--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         distribution:
+          - image: debian
             version: "9"
             tags: "9"
             platform: "linux/amd64"
