--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,10 @@ on:
 jobs:
   build:
     name: ${{ matrix.distribution.image }}-${{ matrix.distribution.version }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     strategy:
       fail-fast: false
       matrix:
@@ -21,23 +24,27 @@ jobs:
           - image: debian
             version: "11"
             platform: "linux/amd64"
-            tags: "11,latest"
+            tags: "11"
+          - image: debian
+            version: "11"
+            platform: "linux/amd64"
+            tags: "12,latest"
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install Inspec
         run: curl https://omnitruck.chef.io/install.sh | sudo bash -s -- -P inspec -v 4.24.8
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -57,6 +64,7 @@ jobs:
           sudo docker run \
             --detach \
             --privileged \
+            --cgroupns=host \
             -v /sys/fs/cgroup:/sys/fs/cgroup:rw \
             hybridadmin/ansible-${{ matrix.distribution.image }}:${{ matrix.distribution.version }} > "${container_id}"
           inspec exec tests/inspec --chef-license accept-silent -t docker://$(cat ${container_id})
