--- a/12/Dockerfile
+++ b/12/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:bookworm
 LABEL maintainer="Tinashe Chikomo <tinashe@chikomo.net>"
 
 ENV container docker
-#ENV LC_ALL C
+
 ENV DEBIAN_FRONTEND noninteractive
 
 ENV pip_packages "ansible pymysql cryptography yamllint ansible-lint"
@@ -14,15 +14,16 @@ RUN apt-get update \
        build-essential wget libffi-dev libssl-dev procps \
        python3-pip python3-dev python3-setuptools python3-wheel python3-apt \
        iproute2 \
+    && pip install uv==0.5.5 \
     && rm -rf /var/lib/apt/lists/* \
     && rm -Rf /usr/share/doc && rm -Rf /usr/share/man \
     && apt-get clean
 
 # Upgrade pip to latest version.
-RUN pip3 install --upgrade pip
+# RUN pip3 install --upgrade pip
 
 # Install Ansible via pip.
-RUN pip3 install $pip_packages
+RUN uv pip install --system $pip_packages
 
 COPY initctl_faker .
 RUN chmod +x initctl_faker && rm -fr /sbin/initctl && ln -s /initctl_faker /sbin/initctl
