add trixie images

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,11 @@ jobs:
           - image: debian
             version: "12"
             platform: "linux/amd64"
-            tags: "12,latest"
+            tags: "12"
+          - image: debian
+            version: "13"
+            platform: "linux/amd64"
+            tags: "13,latest"
 
     steps:
       - name: Checkout repository
