--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -6,7 +6,7 @@ jobs:
       fail-fast: false
       max-parallel: 5
       matrix:
-        distribution:
+        distro:
           - image: debian
             version: "11"
             platform: "linux/amd64,linux/arm64"
