--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -22,8 +22,8 @@ jobs:
     uses: hybridorg/reuse-workflows/.github/workflows/build_push.yml@main
     secrets: inherit
     with:
-      distro_image: ${{ matrix.distro.image }}
-      distro_tags: ${{ matrix.distro.tags }}
-      distro_platform: {{ matrix.distro.platform }}
-      distro_version: {{ matrix.distro.version }}
+      distro_image: '${{ matrix.distro.image }}'
+      distro_tags: '${{ matrix.distro.tags }}'
+      distro_platform: '{{ matrix.distro.platform }}'
+      distro_version: '{{ matrix.distro.version }}'
       repo_name: 'hybridadmin/ansible-debian'
