--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -3,7 +3,7 @@ name: build_push
 on: [push]
 
 jobs:
-  run_molecule_tests:
+  run_molecule_test:
     strategy:
       fail-fast: false
       max-parallel: 5
