readme only please

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -35,3 +35,4 @@ jobs:
       distro_platform: '${{ matrix.distro.platform }}'
       distro_version: '${{ matrix.distro.version }}'
       repo_name: 'hybridadmin/ansible-debian'
+      readme_only: true
